--- a/backserver/conf/apvt.conf
+++ b/backserver/conf/apvt.conf
@@ -9,24 +9,25 @@
 
 # This is the main configuration file that describes the groups/WLCs that are in use.
 
-#read XML file and save it as a hash Reference
+use File::Slurp;
+use vars qw ($gatingWCL $gatingCommunity %csv_file);
 
-use vars qw (%wlc_grp $delay_cycle $samplingrate $sleep_time $default_samplingrate $maxRunTime);
-use FindBin;
-use XML::Simple;
 
-my $conf_dir = "$FindBin::Bin/conf";
-if (! -r "$conf_dir/cvwlcs.xml") {
-	print "ERROR: $conf_dir/cvwlcs.xml is not readable\n";
-    exit (0);
+our $gatingWCL = "wwwp-rcdn-srp-ct5508-03.cisco.com";
+our $gatingCommunity ="wwwprcdnsrpcomm";
+our %csv_file;
+my @heading;
+my @lines = read_file( 'conf/example.csv' ) ;
+my $heading = 1;
+foreach my $line (@lines) {
+	chomp($line);
+	if ($heading == 1){
+		@heading = split(',', $line);
+		$heading++;
+		next;
+	}
+	@data = split(',', $line);
+	for my $i (1 .. $#data){
+		$csv_file{$data['0']}{$heading[$i]}=$data[$i];
+	}
 }
-my $ref = XMLin("$conf_dir/cvwlcs.xml",  ForceArray => { server => 'community'  },  KeyAttr => [ 'name']);
-our %wlc_grp = %{$$ref{'wlc_group'}};
-
-our $delay_cycle =2;  #every cycle is 5 sec
-our $samplingrate = 30;
-our $default_samplingrate = 180;
-our $tmp = "$FindBin::Bin/tmp";
-our $data_path = "$FindBin::Bin/data";
-our $sleep_time = $delay_cycle*$samplingrate; 
-our $maxRunTime=15; # this is in mins
