--- a/backserver/conf/apvt.conf
+++ b/backserver/conf/apvt.conf
@@ -8,16 +8,16 @@
 ##############################################
 
 # This is the main configuration file that describes the groups/WLCs that are in use.
-
 use File::Slurp;
-use vars qw ($gatingWCL $gatingCommunity %csv_file);
-
-
-our $gatingWCL = "wwwp-rcdn-srp-ct5508-03.cisco.com";
+use vars qw ($gatingWLC $gatingWLC_s $gatingCommunity %csv_file);
+use FindBin;
+my $conf_dir = "$FindBin::Bin/conf";
+our $gatingWLC = "wwwp-rcdn-srp-ct5508-03.cisco.com";
+our $gatingWLC_s = "wwwp-rcdn-srp-ct5508-04.cisco.com";
 our $gatingCommunity ="wwwprcdnsrpcomm";
 our %csv_file;
 my @heading;
-my @lines = read_file( 'conf/example.csv' ) ;
+my @lines = read_file("$conf_dir/example.csv") ;
 my $heading = 1;
 foreach my $line (@lines) {
 	chomp($line);
@@ -31,3 +31,4 @@ foreach my $line (@lines) {
 		$csv_file{$data['0']}{$heading[$i]}=$data[$i];
 	}
 }
+1;
