--- a/backservices/conf/apvt.conf
+++ b/backservices/conf/apvt.conf
@@ -12,10 +12,21 @@ use File::Slurp;
 use vars qw ($gatingWLC $gatingWLC_s $gatingCommunity %csv_file);
 use FindBin;
 my $conf_dir = "$FindBin::Bin/conf";
+my $services_path = "/var/www/backservices";
+our $perl = "/usr/bin/perl";
+our $snmpget = "/usr/bin/snmpget";
+our $snmpset = "/usr/bin/snmpset";
+our $updateApconfig = "$services_path/updateApConfig.pl";
+our $searchAp = "$services_path/searchAp.pl";
+our $fetchPreset = "$services_path/fetchPreset.pl";
+our $getApGroupList = "$services_path/getApGroupList.pl";
+our $joinApGroup = "$services_path/joinApGroup.pl";
+our $rebootAp = "$services_path/rebootAp.pl";
 our $gatingWLC = "wwwp-rcdn-srp-ct5508-03.cisco.com";
 our $gatingWLC_s = "wwwp-rcdn-srp-ct5508-04.cisco.com";
 our $gatingCommunity ="wwwprcdnsrpcomm";
 our %csv_file;
+
 my @heading;
 my @lines = read_file("$conf_dir/example.csv") ;
 my $heading = 1;
@@ -31,4 +42,5 @@ foreach my $line (@lines) {
 		$csv_file{$data['0']}{$heading[$i]}=$data[$i];
 	}
 }
+
 1;
