--- a/.gitignore
+++ b/.gitignore
@@ -15,17 +15,12 @@ MYMETA.yml
 nytprof.out
 pm_to_blib
 test/
+html/
 sftp-config.json
 *.sublime-project
 *.sublime-workspace
 sftp-config-alt.json
 sftp-config.json
+html/login.html
 
-
-sftp-config-alt.json
-
-sftp-config-alt.json
-
-sftp-config.json
-
-sftp-config.json
+html/login.html
