--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,4 @@ html/
 sftp-config.json
 *.sublime-project
 *.sublime-workspace
-
-sftp-config-alt.json
-
-sftp-config-alt.json
-
-sftp-config.json
-
-sftp-config.json
+sftp-config*.json
