--- a/backservices/conf/apvt.conf
+++ b/backservices/conf/apvt.conf
@@ -11,6 +11,8 @@
 use File::Slurp;
 use vars qw ($gatingWLC $gatingWLC_s $gatingCommunity %csv_file);
 use FindBin;
+use File::Path qw(make_path);
+
 my $conf_dir = "$FindBin::Bin/conf";
 my $services_path = "/var/www/backservices";
 our $perl = "/usr/bin/perl";
@@ -25,6 +27,8 @@ our $rebootAp = "$services_path/rebootAp.pl";
 our $gatingWLC = "wwwp-rcdn-srp-ct5508-03.cisco.com";
 our $gatingWLC_s = "wwwp-rcdn-srp-ct5508-04.cisco.com";
 our $gatingCommunity ="wwwprcdnsrpcomm";
+our $log_dir = "$FindBin::Bin/log";
+our $log_file = "$log_dir/apvt_log";
 our %csv_file;
 
 my @heading;
@@ -41,6 +45,10 @@ foreach my $line (@lines) {
 	for my $i (1 .. $#data){
 		$csv_file{$data['0']}{$heading[$i]}=$data[$i];
 	}
+}
+
+if ( !-d $log_dir ) {
+	make_path $log_dir  or die "Failed to create path: $log_dir";
 }
 
 1;
