--- a/backservices/conf/appt.conf
+++ b/backservices/conf/appt.conf
@@ -41,7 +41,7 @@ foreach my $line (@lines) {
 		$heading++;
 		next;
 	}
-	@data = split(',', $line);
+	my @data = split(',', $line);
 	for my $i (1 .. $#data){
 		$csv_file{$data['0']}{$heading[$i]}=$data[$i];
 	}
