--- a/cgi-bin/conf/apptweb.conf
+++ b/cgi-bin/conf/apptweb.conf
@@ -7,8 +7,9 @@
 ##  Project:      apvt                      ##
 ##############################################
 
-my $services_path = "/var/www/backservices";
 our $perl = "/usr/bin/perl";
+our $services_path = "/var/www/backservices";
+our $log_path = "/var/www/cgi-bin/session-logs"
 our $updateApconfig = "$services_path/updateApConfig.pl";
 our $searchAp = "$services_path/searchAp.pl";
 our $fetchPreset = "$services_path/fetchPreset.pl";
@@ -16,4 +17,7 @@ our $getApGroupList = "$services_path/getApGroupList.pl";
 our $joinApGroup = "$services_path/joinApGroup.pl";
 our $rebootAp = "$services_path/rebootAp.pl";
 our $login = "login.pl";
+our $getTemplate = "getTemplate.pl";
+our $getProperty = "getProvisionInfo.pl";
+our $provisionSubmitation = "provisionSubmitation.pl";
 1;
