updated for BHN
new GUI
logout, cookies, and new template.

--- a/cgi-bin/conf/apptweb.conf
+++ b/cgi-bin/conf/apptweb.conf
@@ -9,7 +9,7 @@
 
 our $perl = "/usr/bin/perl";
 our $services_path = "/var/www/backservices";
-our $log_path = "/var/www/cgi-bin/session-logs"
+our $log_path = "/var/www/cgi-bin/session-logs";
 our $updateApconfig = "$services_path/updateApConfig.pl";
 our $searchAp = "$services_path/searchAp.pl";
 our $fetchPreset = "$services_path/fetchPreset.pl";
