--- a/cgi-bin/conf/apptweb.conf
+++ b/cgi-bin/conf/apptweb.conf
@@ -9,7 +9,7 @@
 
 our $perl = "/usr/bin/perl";
 our $services_path = "/var/www/backservices";
-our $log_path = "/var/www/cgi-bin/session-logs";
+our $log_path = "session_logs";
 our $updateApconfig = "$services_path/updateApConfig.pl";
 our $searchAp = "$services_path/searchAp.pl";
 our $fetchPreset = "$services_path/fetchPreset.pl";
@@ -20,4 +20,5 @@ our $login = "login.pl";
 our $getTemplate = "getTemplate.pl";
 our $getProperty = "getProvisionInfo.pl";
 our $provisionSubmitation = "provisionSubmitation.pl";
+our $validation = "validation.pl";
 1;
