--- a/backservices/conf/appt.conf
+++ b/backservices/conf/appt.conf
@@ -9,7 +9,7 @@
 
 # This is the main configuration file that describes the groups/WLCs that are in use.
 use File::Slurp;
-use vars qw ($gatingWLC $gatingWLC_s $gatingCommunity %csv_file);
+use vars qw ($gatingWLC $gatingWLC_s $gatingCommunity %csv_file $log_conf);
 use FindBin;
 use File::Path qw(make_path);
 
@@ -18,34 +18,18 @@ my $services_path = "/var/www/backservices";
 our $perl = "/usr/bin/perl";
 our $snmpget = "/usr/bin/snmpget";
 our $snmpset = "/usr/bin/snmpset";
+our $pgrep = "/usr/bin/pgrep";
 our $updateApconfig = "$services_path/updateApConfig.pl";
 our $searchAp = "$services_path/searchAp.pl";
 our $fetchPreset = "$services_path/fetchPreset.pl";
 our $getApGroupList = "$services_path/getApGroupList.pl";
 our $joinApGroup = "$services_path/joinApGroup.pl";
 our $rebootAp = "$services_path/rebootAp.pl";
-our $gatingWLC = "wwwp-rcdn-srp-ct5508-03.cisco.com";
-our $gatingWLC_s = "wwwp-rcdn-srp-ct5508-04.cisco.com";
-our $gatingCommunity ="wwwprcdnsrpcomm";
-our $log_dir = "$FindBin::Bin/log";
-our $log_file = "$log_dir/apvt_log";
-our %csv_file;
-
-my @heading;
-my @lines = read_file("$conf_dir/example.csv") ;
-my $heading = 1;
-foreach my $line (@lines) {
-	chomp($line);
-	if ($heading == 1){
-		@heading = split(',', $line);
-		$heading++;
-		next;
-	}
-	my @data = split(',', $line);
-	for my $i (1 .. $#data){
-		$csv_file{$data['0']}{$heading[$i]}=$data[$i];
-	}
-}
+our $gatingWLC = "65.32.12.36";
+our $gatingCommunity ="private";
+our $log_dir = "$FindBin::Bin/logs";
+our $log_conf = "apptlog.conf";
+our $provision_log_path = "$log_dir/provision_log";
 
 if ( !-d $log_dir ) {
 	make_path $log_dir  or die "Failed to create path: $log_dir";
