--- a/cgi-bin/conf/apptweb.conf
+++ b/cgi-bin/conf/apptweb.conf
@@ -1,15 +1,16 @@
 #!/usr/bin/perl 
 
 ##############################################
-##  Author:       Yin Chen                  ##                     
+##  Author:       Yin Chen                  ##
 ##  Contact:      yinche@cisco.com          ##
 ##  Data:         Nov 21 2013               ##
 ##  Project:      apvt                      ##
 ##############################################
 
 our $perl = "/usr/bin/perl";
-our $services_path = "/var/www/backservices";
-our $log_path = "session_logs";
+our $services_path = "/opt/appt";
+our $log_path = "/opt/appt/logs";
+our $session_path = "/opt/appt/logs/session_logs";
 our $updateApconfig = "$services_path/updateApConfig.pl";
 our $searchAp = "$services_path/searchAp.pl";
 our $fetchPreset = "$services_path/fetchPreset.pl";
@@ -20,5 +21,7 @@ our $login = "login.pl";
 our $getTemplate = "getTemplate.pl";
 our $getProperty = "getProvisionInfo.pl";
 our $provisionSubmitation = "provisionSubmitation.pl";
-our $validation = "validation.pl";
+our $flashAp = "$services_path/flashAp.pl";
+our $getApFlash = "getApFlash.pl";
 1;
+
